# albers-core

./: CMakeLists.txt  README.md  package.json
javascript/: CMakeLists.txt
src/: CMakeLists.txt  addon.cc
src/examples/: CMakeLists.txt
src/install/cmake/: alberscoreTargets-noconfig.cmake  alberscoreTargets.cmake
src/javascript/: CMakeLists.txt
